--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -142,7 +142,7 @@
 @define-color osd_text_shadow #000000;
 @define-color window_frame #7C7C7C;
 @define-color window_frame_inactive #3E3E3E;
-@define-color border_color #ff0000;
+@define-color border_color #3D3D3D;
 
 * {
     padding: 0;
@@ -290,7 +290,6 @@ button spinner:checked {
                       shade(@theme_base_color, 0.9));
     background-color: @theme_base_color;
     border-color: @border_color;
-    border-radius: 3px;
     border-width: 1px;
     border-style: solid;
 }
@@ -619,7 +618,7 @@ undershoot.right {
 entry {
     background-color: @theme_base_color;
     border: solid;
-    border-color: #3D3D3D;
+    border-color: @border_color;
 	box-shadow:inset 0px 0px 0px 1px #000000;
     border-width:1px;
 	background-size: 100% 100%;
@@ -3785,10 +3784,9 @@ row:hover:focus,
 expander {
     border-style: solid;
     border-width: 1px;
-    border-radius: 2px;
     border-color: @border_color;
     color: @theme_fg_color;
-    background-color: shade(@theme_bg_color, 1.02);
+    background-color: @theme_base_color;
 }
 
 treeview.view.expander {
