--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -356,7 +356,7 @@ statusbar frame {
 }
 
 statusbar frame button.flat {
-    padding: 2px 0px 0px 0px;
+    
 }
 
 .dnd {
@@ -1634,6 +1634,8 @@ spinbutton.vertical > button:focus:active:last-child {
 /* Button background */
 button,
 spinbutton button,
+statusbar button,
+popover button,
 combobox button.combo,
 toolbar button,
 toolbar button,
@@ -1659,6 +1661,8 @@ button:hover:active,
 menuitem button:hover,
 spinbutton button:active,
 spinbutton button:active:hover,
+statusbar button:active,
+popover button:active:hover,
 combobox button.combo:checked,
 toolbar button:checked,
 toolbar button:checked:hover,
@@ -3350,22 +3354,17 @@ toolbar.osd separator {
 */
 /* spinbuttons in color selection */
 .osd.popover spinbutton button {
-    border-radius: 0px;
-    border-width: 0px;
-    border-image: none;
-    padding: 6px;
+
 }
 
 .osd.popover spinbutton button:last-child {
-    border-radius: 0px 3px 3px 0px;
+
 }
 
 .osd.popover spinbutton button:focus:active {
-    background-image: linear-gradient(to bottom,
-                                      @osd_button_bg_active_a,
-                                      @osd_button_bg_active_b 20%,
-                                      @osd_button_bg_active_c);
+
 }
+
 
 .osd progressbar,
 progressbar .osd {
@@ -3910,13 +3909,7 @@ headerbar {
 
 headerbar,
 .titlebar {
-    background-image: linear-gradient(to bottom,
-                      @theme_base_color,
-                      @theme_bg_color);
-    background-color: transparent;
-    border-radius: 7px 7px 0 0;
-    border-bottom: 1px solid;
-    border-color: shade(@border_color, 1.30);
+   border-color: shade(@border_color, 1.30);
     padding: 5px 4px 4px 4px;
 }
 
@@ -4009,20 +4002,80 @@ actionbar {
  *************/
 
 popover.background {
-    background-clip: initial;
-    margin: 10px;
-    padding: 2px;
-    border-color: @border_color;
-    border: 1px solid;
-    border-radius: 2px;
-    background-color: @theme_bg_color;
-    background-image: linear-gradient(to bottom,
-                                      shade(@theme_bg_color, 1.0),
-                                      shade(@theme_bg_color, 0.85));
-    box-shadow: 0 1px 5px @wm_shadow;
-    text-shadow: none;
-    -gtk-icon-shadow: none;
+  background-clip: initial;
+  margin: 10px;
+  padding: 2px;
+  border: 1px solid darker(@theme_base_color);
+  border-radius: 3px;
+  background-color: @theme_bg_color;
+  box-shadow: 0 1px 5px #000000;
+  text-shadow: none;
+  icon-shadow: none;
 }
+
+.popover {
+  background-clip: initial;
+  margin: 10px;
+  padding: 2px;
+  border: 1px solid darker(@theme_base_color);
+  border-radius: 3px;
+  background-color: @theme_bg_color;
+  box-shadow: 0 1px 5px #000000;
+  text-shadow: none;
+  icon-shadow: none; 
+}
+.popover > .list, 
+.popover > .view,
+.popover > .toolbar .popover.osd > .toolbar, 
+.popover > .inline-toolbar .popover.osd > .toolbar, 
+.popover > .search-bar .popover.osd > .toolbar, 
+.popover > .location-bar .popover.osd > .toolbar,
+.popover > .toolbar .popover.osd > .inline-toolbar, 
+.popover > .inline-toolbar .popover.osd > .inline-toolbar, 
+.popover > .search-bar .popover.osd > .inline-toolbar, 
+.popover > .location-bar .popover.osd > .inline-toolbar,
+.popover > .toolbar .popover.osd > .search-bar, 
+.popover > .inline-toolbar .popover.osd > .search-bar, 
+.popover > .search-bar .popover.osd > .search-bar,
+.popover > .location-bar .popover.osd > .search-bar,
+.popover > .toolbar .popover.osd > .location-bar,
+.popover > .inline-toolbar .popover.osd > .location-bar, 
+.popover > .search-bar .popover.osd > .location-bar, 
+.popover > .location-bar .popover.osd > .location-bar {
+    border-style: none;
+    background-color: transparent; 
+}
+/* osd - on screen display*/
+.popover.osd {
+    background-image: none;
+    background-color: alpha(shade(#3D3E40, 0.85), 0.85);
+    border: 1px solid black;
+    box-shadow: none;
+    color: @theme_selected_fg_color; 
+}
+.popover.osd .toolbar {
+      background-image: none;
+      background-color: transparent;
+      border: none;
+      box-shadow: none; 
+}
+/**
+.popover.osd .button {
+      text-shadow: 0 -1px @osd_text_shadow;
+      icon-shadow: 0 -1px @osd_text_shadow; 
+}
+.popover.osd .button:active,
+.popover.osd .button:checked {
+        box-shadow: none;
+}
+.popover.osd .button:insensitive {
+        color: alpha(@theme_selected_fg_color, 0.4); 
+}
+*/
+.popover .list {
+  background-color: @theme_base_color; 
+}
+
 
 popover > list,
 popover > .view,
@@ -4085,7 +4138,6 @@ popover separator {
 
 modelbutton.flat {
     color: @theme_fg_color;
-    border-radius: 3px;
 }
 
 modelbutton.flat,
@@ -4111,14 +4163,6 @@ modelbutton.flat:focus,
 modelbutton.flat:active:focus,
 modelbutton.flat:checked:focus {
     color: @theme_fg_color;
-    background-color: transparent;
-    background-image: none;
-    border-color: transparent;
-    border-image: none;
-    border-style: solid;
-    border-width: 1px;
-    box-shadow: none;
-    border-radius: 3px;
 }
 
 modelbutton.flat:checked:hover,
@@ -4126,21 +4170,13 @@ modelbutton.flat:active:hover,
 modelbutton.flat:hover,
 modelbutton.flat:selected {
     color: @theme_selected_fg_color;
-    background-image:  linear-gradient(to bottom,
-                                      shade(@theme_selected_bg_color, 1.1),
-                                      shade(@theme_selected_bg_color, 0.8));
-    text-shadow: none;
-    border-color: @button_active_gradient_a;
-    border-width: 1px;
-    border-radius: 3px;
-    border-style: solid;
 }
 
 popover separator {
 	border-image: url("darkelements/line-h.png") 0 0 2 0  stretch ;
 	border-width:  0 0 2px 0;
 }
-
+/*
 popover button.default.text-button.suggested-action {
     background-color: transparent;
     background-image: none;
@@ -4160,6 +4196,7 @@ popover button.default.text-button.suggested-action:hover {
     border-width: 2px;
     border-radius: 3px;
 }
+/*
 
 /************
  * GtkStack *
@@ -4224,16 +4261,7 @@ headerbar .app-notification button.titlebutton,
 calendar.header .app-notification button.titlebutton,
 .app-notification.frame button {
     color: @theme_fg_color;
-    border-color: rgba(89, 112, 75, 0.7);
-    background-image: linear-gradient(to bottom,
-                                      rgba(180, 187, 163, 0.7));
-    background-clip: padding-box;
-    box-shadow: inset 0 1px rgba(255, 255, 255, 0.1);
-    text-shadow: none;
-    -gtk-icon-shadow: 0 1px black;
-    outline-color: rgba(238, 238, 236, 0.3);
-
-    padding: 0 0px 2px 0px;
+    
 }
 
 .app-notification button.flat,
@@ -4256,62 +4284,26 @@ calendar.header .app-notification.frame button.titlebutton {
 
 .app-notification button:hover,
 .app-notification.frame button:hover {
-    color: white;
-    border-color: rgba(0, 0, 0, 0.7);
-    background-image: linear-gradient(to bottom,
-                                      rgba(119, 158, 79, 0.7));
-    background-clip: padding-box;
-    box-shadow: inset 0 1px rgba(255, 255, 255, 0.1);
-    text-shadow: none;
-    -gtk-icon-shadow: 0 1px black;
-    outline-color: rgba(238, 238, 236, 0.3);
-
+   
 }
 
 .app-notification button:checked,
 .app-notification button:backdrop:checked,
 .app-notification.frame button:checked,
 .app-notification.frame button:backdrop:checked {
-    color: white;
-    border-color: rgba(0, 0, 0, 0.7);
-    background-image: linear-gradient(to bottom,
-                                      rgba(105, 175, 65, 0.7));
-    background-clip: padding-box;
-    box-shadow: none;
-    text-shadow: none;
-    -gtk-icon-shadow: none;
-    outline-color: rgba(238, 238, 236, 0.3);
-
+   
 }
 
 .app-notification button:disabled,
 .app-notification button:backdrop:disabled,
 .app-notification.frame button:disabled,
 .app-notification.frame button:backdrop:disabled {
-    color: #878989;
-    border-color: rgba(0, 0, 0, 0.7);
-    background-image: linear-gradient(to bottom,
-                                      rgba(52, 57, 57, 0.5));
-    background-clip: padding-box;
-    box-shadow: none;
-    text-shadow: none;
-    -gtk-icon-shadow: none;
 
-    padding: 0px;
 }
 
 .app-notification button:backdrop,
 .app-notification.frame button:backdrop {
-    color: #eeeeec;
-    border-color: rgba(0, 0, 0, 0.7);
-    background-image: linear-gradient(to bottom,
-                                      rgba(180, 187, 163, 0.7));
-    background-clip: padding-box;
-    box-shadow: none;
-    text-shadow: none;
-    -gtk-icon-shadow: none;
-;
-    padding: 0px;
+
 }
 
 /* hyperlinks */
