replace "deprecated" (but actually removed) scrollbar properties

--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -2311,10 +2311,6 @@ scrollbar {
     -GtkScrollbar-has-forward-stepper: true;
     background-image: none;
     border-style: solid;
-    -GtkRange-trough-border: 0;
-    
-    -GtkRange-slider-width: 16px;
-    -GtkRange-stepper-size: 16px;
 }
 
 scrollbar.vertical {
@@ -2326,7 +2322,7 @@ scrollbar.horizontal {
 }
 
 scrollbar trough {
-
+    margin: 0;
 }
 
 scrolledwindow junction {
@@ -2454,6 +2450,7 @@ scrollbar.vertical .slider:hover {
 
 scrollbar.horizontal slider,
 scrollbar.horizontal .slider {
+    min-height: 16px;
     border: solid;
  	border-image: url("darkelements/scrollbars/slider-horiz.png") 8 2 8 2 / 8px 2px 8px 2px stretch stretch;
     border-width: 8px 2px;
