removed global background

--- a/gtk-3.0/gtk-widgets.css
+++ b/gtk-3.0/gtk-widgets.css
@@ -54,7 +54,7 @@
  ***************/
 GtkWindow {
    color: @theme_fg_color;
-   background-image: url("darkelements/bg.jpg");
+  /* background-image: url("darkelements/bg.jpg");*/
    background-repeat: repeat-x;
    padding:0;
    background-color: @theme_bg_color;
